<resources>
    <string name="app_name">پوکی استخوان</string>
    <string name="moshavere">مشاوره رایگان</string>
    <string name="avarez">عوارض</string>
    <string name="alaem">علائم</string>
    <string name="dalaiel">دلایل</string>
    <string name="pishgiri">پیشگیری</string>
    <string name="test">تست تشخیص</string>
    <string name="tashkhis">آزمایشهای تشخیص</string>
    <string name="darman">روشهای درمان</string>
    <string name="search">جستجو</string>
    <string name="send">ارسال نرم افزار</string>
    <string name="site">وب سایت</string>
    <string name="about">درباره کلینیک</string>
    <string name="developer">تیم توسعه</string>
    <string name="esteopeni">استئوپنی</string>
    <string name="dard">درد</string>
    <string name="shekastegi">شکستگی استخوان</string>
    <string name="poosidegi_dandan">پوسیدگی دندان</string>
    <string name="kahesh_ghad">کاهش قد</string>
    <string name="khamidegi">خمیدگی ستون فقرات</string>
    <string name="varzesh">ورزش</string>
    <string name="darman_darooie">درمان دارویی</string>
    <string name="jaigozin_hormoni">درمان جایگزین هورمونی</string>
    <string name="hormoni">درمان هورمونی</string>
    <string name="mokamelha">استفاده از مکمل ها</string>
    <string name="tosie_vizhe">توصیه های ویژه</string>
    <string name="control_vazn">کنترل وزن</string>
    <string name="rezhim">رژیم غذایی</string>
    <string name="masraf_daro">کنترل مصرف داروها</string>
    <string name="bardari">استخوان سازی حین بارداری</string>
    <string name="tark_adat">ترک عادات مضر</string>
    <string name="dokhaniat">دخانیات</string>
    <string name="alkol">مصرف الکل</string>
    <string name="bimariha">انواع بیماریها</string>
    <string name="masraf_daroo">مصرف برخی داروها</string>
    <string name="ghabel_pishgiri">قابل پیشگیری</string>
    <string name="gheir_ghabel_pishgiri">غیرقابل پیشگیری</string>
    <string name="info_title_2">سن بیمار و پوکی استخوان</string>
    <string name="info_title_4">شکستگی ظریف</string>
    <string name="info_title_5">عدم نیاز به مدیریت خاص</string>
    <string name="info_title_7">متخصص غدد یا متخصص متابولیک استخوان</string>
    <string name="info_title_9">چگالی سنجی استخوان</string>
    <string name="info_title_12">درمان پایه</string>
    <string name="info_title_15">فزونی کلسیم</string>
    <string name="info_title_18">مکمل کلسیم</string>
    <string name="info_title_23">درمان پایه</string>
    <string name="info_title_25">زمان بندی ﺑﻴﺴﻔﺴﻔﻮﻧﺎت</string>
    <string name="info_title_27">زمان بندی بیسفسفنات</string>
    <string name="info_title_28">بیسفسفنات خوراکی</string>
    <string name="info_title_32">ادامه درمان جاری: انتقال به بیسفسفنات وریدی</string>
    <string name="info_title_36">ادامه روش درمانی جاری: رالکسیفن</string>
    <string name="info_title_38">ادامه روش درمانی جاری: استرانسیوم رانلات</string>
    <string name="info_title_42">ادامه روش درمان جاری: تری پاراتاید</string>
    <string name="info_title_43">شکست روش درمانی</string>
    <string name="info_title_44">حفظ روش درمانی خاص</string>
    <string name="info_title_47">تغییرات درمانی</string>
    <string name="info_title_69">FRAX</string>
    <string formatted="false" name="info_content_2">پوکی استخوان شرایطی است که علت اصلی 95% موارد شکستگی استخوان در بیماران بالای 75 سال و بستری های مربوط به آن در بیمارستان را تشکیل می دهد و 80 تا 90 % این موارد مربوط به بیمارانی است که در سنین بین 60 تا 74 قرار دارند. پوکی استخوان معمولاً 10 سال دیرتر در مردان در مقایسه با زنان مشاهده می شود.</string>
    <string name="info_content_4">در اصطلاح شکستگی ظریف به عنوان یک شکستگی در استخوان تعریف می شود که به واسطه یک آسیب که در حالت عادی نمی تواند باعث شکستن استخوان شود، ایجاد شده باشد. این شکستگی معمولاً به خاطر کاهش تراکم استخوان و یا مقاومت پیچشی آن اتفاق می افتد. از نظر کلینیکی، شکستگی ظریف موردی از شکستگی است که می تواند در نتیجه حداقل ضربه همچون افتادن از یک مکان نه چندان بلند یا بدون دلیل مشخص ایجاد شود.</string>
    <string name="info_content_5">در این حالت مدیریت خاص مورد نیاز نمی باشد.</string>
    <string name="info_content_7">در گروه های سنی جوان تر (زیر 60 سال) احتمال ایجاد یک پوکی استخوان ثانویه نیازمند بررسی های لازم برای شناسایی بیماری های منشاء ایجاد مشکل در فرد است (همچون کارسینوم، هیپوگنادیسم شامل یائسگی زودتر از موعد درمان نشده، درمان با آروماتاز مهار کننده یا درمان سرطان، پر کاری تیروئید، پر کاری پاراتیروئید، افزایش پرولاکتین، بیماری کوشینگ، دیابت، بیماری سلیاک، بیماری ورم شکم و روده، بیماری مزمن کبد، پانکراس مزمن، سایر بیماری های سوء جذب، رماتوئید آرتیریس، تومور بدخیم سلول های مغز استخوان، اختلال گلبول های قرمز، ماستوسیتوز سیستماتیک، تصلب کیستی بافت ها،

انسداد مزمن ریوی، هموسیستینوری، بیماری مزمن کلیوی).
</string>
    <string name="info_content_9">چگالی معدنی استخوان (BMD) که در اکثر مواقع به عنوان امتیاز تی (T-score) گزارش می شود، با یک واحد انحراف استاندارد محاسبه می شود. امتیاز تی تعداد انحراف استاندارد اختلاف بین چگالی معدنی استخوان در یک فرد از مقدار میانگین پیش بینی شده در افراد سالم جوان را نشان می دهد. تعریف پوکی استخوان بر اساس امتیاز تی برای چگالی معدنی استخوان ارزیابی می شود که می تواند نشان دهنده احتمال ایجاد شکستگی گردن باشد و با یک ارزش منفی 2.5 انحراف معیار یا بیشتر محاسبه می شود.</string>
    <string name="info_content_12">درمان پایه در این حالت شامل ارائه 1،000 میلی گرم کلسیم و 2،000 واحد ویتامین دی در هر روز است.</string>
    <string name="info_content_15">استفاده بیش از حد نیاز کلسیم یک مشکل کلینیکی عادی است. پر کاری تیروئید و تومور بدخیم از رایج ترین علل فزونی کلسیم است ه در بیش از 90% موارد مشاهده می شود. سایر دلایل فزونی کلسیم به ندرت اتفاق می افتند اما در نظر گرفتن آنها در شرایط کلینیکی با اهمیت است (برای مثال مسمویت با ویتامین دی، اختلالات گرانولوماتوز مزمن، پر کاری تیروئید، ترشح زیاد غده هیپوفیز، فئوکروموسیتوما، کمبود آدرنال، عدم تحرک، تغذیه وریدی، سندروم شیر قلیا، و مصرف برخی داروها همچون دیوروتیک های تیازیدی، لیتیوم، تری پاراتاید، فزونی ویتامین آ و داروی تئوفیلین).
بنابراین برای این بیماران نیازمند خدمات تخصصی قبل از شروع درمان هستند.
</string>
    <string name="info_content_18">معمولاً مواردی که از نظر آزمایشگاه بررسی شده دارای کلسیم یونی نیست. مقدار کل کلسیم باید با توجه به سطح آلبومین تعدیل و اصلاح شود. مقدار صحیح مصرف کلسیم با توجه به سطح آلبومین به شرح زیر محاسبه می شود:
جمع مقدار مصرف صحیح کلسیم = کل مقدار کلسیم اندازه گیری شده + 0.8 (سرم آلبومین – 4.0) کلسیوم بر حسب میلی گرم بر دسی لیتر اندازه گیری می شود و آلبومین بر حسب گرم بر دسی لیتر محاسبه می شود.
مکمل با 500 تا 1،000 میلی گرم از عنصر کلسیم سه بار در روز استفاده شود و برای کنترل علائم دوز دارو اصلاح شود تا به این ترتیب بتوان به سطح بهینه کسیم دست یافت. در موارد جدی حداقل 1 تا 2 گرم عنصر کلسیم سه بار در روز معمولاً مورد نیاز است.
</string>
    <string name="info_content_23">درمان پایه در این حالت به معنی استفاده از مکمل محتوی 1،000 میلی گرم کلسیم و 2،000 واحد ویتامین دی در هر روز است.</string>
    <string name="info_content_25">تجویز زلدرونیک اسید برای بیماران با جراحت کم از نظر شکستگی ران 2 هفته یا بیشتر پس از عمل جراحی ترمیمی لازم است که می تواند باعث افزایش چگالی معدنی استخوان ران شامل کاهش چشمگیر در خطر بعدی شکستگی مهره های ستون فقرات، سایر مهره ها و استخوان ران و نیز کاهش مرگ و میر شود.</string>
    <string name="info_content_27">تجویز زلدرونیک اسید برای بیماران با جراحت کم از نظر شکستگی ران 2 هفته یا بیشتر پس از عمل جراحی ترمیمی لازم است که می تواند باعث افزایش چگالی معدنی استخوان ران شامل کاهش چشمگیر در خطر بعدی شکستگی مهره های ستون فقرات، سایر مهره ها و استخوان ران و نیز کاهش مرگ و میر شود.</string>
    <string name="info_content_28">در صورت درمان فرد در بیمارستان بابت پوکی استخوان می توان فرآیند بهبود پوکی استخوان را تسریع کرد. معمولاً بیماران مبتلا به شکستگی ظریف پس از 2 هفته از بخش اورتوپدی مرخص می شوند. یک راهکار جایگزین می توان بیسفسفنات خوراکی باشد و پیشنهاد می شود پس از ترخیص از بیسفسفنات وریدی استفاده شود.</string>
    <string name="info_content_32">واکنش ضعیف به دارو مربوط به اثرات جانبی نتایج در پوکی استخوان یا بیماری های استخوانی است و بیمارانی که به این داروها واکنش نشان نمی دهند دارای نسبت گردش استخوانی به نسبت پایین، ضریب پایین چگالی مواد معدنی، و خطر بالا با اهمیت شکستگی هستند. مطابق تحلیل انجام شده توسط گروه اجتماعی زمان یائسه در معرض خطر، خطر ایجاد شکستگی برای بیمارانی که بیسفسفنات دریافت می کند بطور از نظر آماری با بیمارانی که بیسفسفنات را دریافت نمی کنند، تفاوت با اهمیت و معنی دار ندارد.</string>
    <string name="info_content_36">رالکسیفن نباید برای زنانی استفاده شود که با مشکلات لخته خون شامل ترومبوز رگی عمقی و آمبولی ریوی مواجه هستند. بر اساس توصیه ارائه شده برای پروفیلاکسیس ترومبوآمبولی برای یک شکستگی ران، یک خطر بالاتر برای بیماران دچار شکستگی برای 35 روز ممکن است مورد انتظار باشد. بنابراین، پیشنهاد می شود مصرف دارو برای یک دوره موقتی 35 روزه متوقف شود.</string>
    <string name="info_content_38">
    استرونیوم رانلات مربوط به افزایش خطر VTE است. نتایج حاصل از بررسی جمعیت استفاده کننده و مراقبت های پس از بازاریابی نشان می دهد که این خطر در بیمارانی بیشتر است که بطور موقت یا دائمی دچار بی تحرکی بوده اند. بنابراین استرانسیوم رانلات نباید برای این بیماران استفاده شود. بر اساس پیشنهادات ارائه شده برای پروفیلاکسیس ترومبوآمبولی برای 35 روز پس از شکستگی ران، یک خطر بالاتر برای ایجاد شکستگی برای بیماران پس از 35 روز مورد انتظار است.
علاوه بر این، برای کاهش خطر حمله قلبی، استرانسیوم رانلات باید همچنین برای بیماران دارای فشار خون بالا که مشکل آنها به نحو صحیح و مناسب کنترل نشده یا برای بیمارانی که سابقه بیماری فعلی یا گذشته در مسائل زیر دارند، نباید مورد استفاده قرار گیرد:
•	 بیماری های ایسکمیک قلب (همچون آنژین یا حمله قلبی)
•	بیماری شریانی محیطی یا اندامی (انسداد جرایان خون در سرخرگ که معمولاً در پاها مشاهده می شود)
•	بیماری عروق مغزی (بیماری که رگ های خونی در مغز را تحت تاثیر قرار می دهد، مثل سکته)
هر چند دو مطالعه اخیر انجام شده وجود خطر بالاتر برای بیماران مبتلا به بیماری عروق مغزی را به واسطه مصرف استرانسیوم رانلات نشان نمی دهد، اکثریت غریب به اتفاق افراد مسن مبتلا به پوکی استخوان دارای شرایطی هستند که در حال حاضر مطابق EMA مصرف این دارو برای آنها به عنوان منع استعمال در نظر گرفته می شود. به این دلایل، استرانسیوم رانلات فقط برای بیمارانی تجویز می شود که برای مشکل آنها هیچ روش درمانی جایگزین دیگری وجود نداشته باشد.

    </string>
    <string name="info_content_42">درمان با PTH برای 18 تا 24 ماه مورد مطالعه قرار گرفته است. مزایای حاصل از مصرف تری پاراتاید بر شکستگی های غیر استخوانی نشان دهنده ماندگاری دارو تا 30 ماه پس از توقف مصرف آن است.</string>
    <string name="info_content_43">روش درمانی اتخاذ شده باید در صورت وقوع شرایط زیر تغییر کند:
	مشاهده دو مورد یا بیشتر از ایجاد شکستگی های ظریف
	یک شکستگی ایجاد شده و ترشح بیش از حد β-CTX یا P1NP از خط مبنا بدون هیچ کاهش عمده در طول درمان، یک کاهش زیاد در چگالی معدنی استخوان (BMD)، یا هر دو
عدم مشاهده کاهش با اهمیت در سرم β-CTX یا P1NP با وجود کاهش زیاد در چگالی معدنی استخوان
</string>
    <string name="info_content_44">روش درمانی خاص تجویز شده برای پوکی استخوان را حفظ کنید.</string>
    <string name="info_content_47">هیچ شواهدی درباره اثربخشی روش های درمانی جایگزین در صورتی که روش درمانی اولیه استفاده شده موفقیت آمیز نباشد، مشاهده نشده است. در این رابطه تقریباً هیچ مطالعه ای برای بررسی این موضوع انجام نشده است؛ بنابراین، اطلاعات موجود در این حوزه محدود هستند. برخی از بانک های اطلاعاتی به بررسی غیر مستقیم نتایج پرداخته یا نشان می دهند روش های جایگزین در پایان می توانند مفید باشند. بر این اساس سه قاعده عمومی بر اساس اصول IOF CSA منتشر شده که مربوط به گروه کاری پاسخگویی غیر کافی است. این اصول پیشنهادی به شرح زیر هستند:
•	یک عامل ضعیف ضد باز جذب استخوان که بطور منطقی جایگزین یک داروی قوی تر در برخی انواع مشابه می شود.
•	یک داروی خوراکی که بطور منطقی جایگزین یک داروی تزریقی می شود.
یک عامل قوی ضد باز جذب استخوان که بطور منطقی جایگزین یک عامل آنابولیک می شود.
</string>
</resources>