<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:name="com.phoenix.osteoporosis.fragments.FooterFragment"
            tools:layout="@layout/footer_layout"
            android:layout_alignParentBottom="true"
            android:id="@+id/layout_footer"
            />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/layout_footer"
            android:orientation="vertical"
            android:padding="10dp"
            >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/tile_back"
                    android:layout_margin="@dimen/cell_margin"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textSize="@dimen/menu_font_size"
                        android:textColor="@color/menu_text_color"
                        android:text="@string/esteopeni"
                        android:gravity="center"
                        />

                    </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    >

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/tile_back"
                        android:layout_margin="@dimen/cell_margin"
                        >

                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="@dimen/menu_font_size"
                            android:textColor="@color/menu_text_color"
                            android:text="@string/dard"
                            android:gravity="center"
                            />
                        </LinearLayout>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/tile_back"
                        android:layout_margin="@dimen/cell_margin"
                        >

                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="@dimen/menu_font_size"
                            android:textColor="@color/menu_text_color"
                            android:text="@string/shekastegi"
                            android:gravity="center"
                            />
                        </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/cell_margin"
                    android:background="@color/tile_back"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textSize="@dimen/menu_font_size"
                        android:textColor="@color/menu_text_color"
                        android:text="@string/poosidegi_dandan"
                        android:gravity="center"
                        />
                    </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/cell_margin"
                    android:background="@color/tile_back"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textSize="@dimen/menu_font_size"
                        android:textColor="@color/menu_text_color"
                        android:text="@string/kahesh_ghad"
                        android:gravity="center"
                        />
                    </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/cell_margin"
                    android:background="@color/tile_back"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textSize="@dimen/menu_font_size"
                        android:textColor="@color/menu_text_color"
                        android:text="@string/khamidegi"
                        android:gravity="center"
                        />
                    </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>