<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <fragment
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:name="com.phoenix.osteoporosis.fragments.FooterFragment"
            tools:layout="@layout/footer_layout"
            android:layout_alignParentBottom="true"
            android:id="@+id/layout_footer"
            />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/layout_footer"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/background"
            >
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/tile_back"
                    android:layout_margin="@dimen/cell_margin"
                    android:onClick="onClick"
                    android:id="@+id/darman_darooie"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/darman_darooie"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/menu_font_size"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    >

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@color/tile_back"
                        android:layout_margin="@dimen/cell_margin"
                        android:padding="5dp"
                        android:onClick="onClick"
                        android:id="@+id/darman_jaigozin"
                        >

                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:text="@string/jaigozin_hormoni"
                            android:textColor="@color/menu_text_color"
                            android:textSize="@dimen/menu_font_size"
                            />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@color/tile_back"
                        android:layout_margin="@dimen/cell_margin"
                        android:padding="5dp"
                        android:onClick="onClick"
                        android:id="@+id/darman_hormoni"
                        >

                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:text="@string/hormoni"
                            android:textColor="@color/menu_text_color"
                            android:textSize="@dimen/menu_font_size"
                            />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/tile_back"
                    android:layout_margin="@dimen/cell_margin"
                    android:padding="5dp"
                    android:onClick="onClick"
                    android:id="@+id/darman_tosie"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/tosie_vizhe"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/menu_font_size"
                        />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/difer_tile_back"
                    android:layout_margin="@dimen/cell_margin"
                    android:id="@+id/darman_varzesh"
                    android:onClick="onClick"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/varzesh"
                        android:textColor="@color/menu_text_color2"
                        android:textSize="@dimen/menu_font_size"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/tile_back"
                    android:layout_margin="@dimen/cell_margin"
                    android:padding="5dp"
                    android:onClick="onClick"
                    android:id="@+id/darman_mokamel"
                    >

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/mokamelha"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/menu_font_size"
                        />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>